# due-diligence-agents

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKERHUB.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  NOTICE  PRODUCTION_HARDENING_PLAN.md  README.md  SECURITY.md  demo.tape  mkdocs.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: code-reviewer.md  test-runner.md
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  pages.yml  release.yml
Formula/: dd-agents.rb
config/: deal-config.template.json  report_schema.json
docs/: README.md  agent-anatomy.md  agent-customization.md  contributing.md  eval-datasheet.md  extraction-knowledge-base.md  index.md  knowledge-architecture.md  search-guide.md  system-card.md
docs/history/: PRODUCTION_HARDENING_PLAN.md
docs/marketing/: LAUNCH-ASSETS.md  REPORT_SHOWCASE.md  demo-script.sh  demo-v1.6.tape  devto-trust-layer.md  distribution-channels.md  key-lessons-learned.html  launch-copy-pack.md  presentation.html  producthunt-launch-plan.md  project-atlas-bible.md  video-brief.md
docs/marketing/recordings/: 01-atlas-run.tape  02-quick-scan.tape  03-search-cite.tape  04-cli-tour.tape  05-install.tape  README.md  screen-recording-guide.md
docs/marketing/sample-report-atlas/: dd_report.xlsx  findings_merged.json  index.html
docs/overrides/: main.html
docs/plan/: 01-architecture-decisions.md  02-system-architecture.md  03-project-structure.md  04-data-models.md  05-orchestrator.md  06-agents.md  07-tools-and-hooks.md  08-extraction.md  09-entity-resolution.md  10-reporting.md  11-qa-validation.md  12-error-recovery.md  13-multi-project.md  14-vector-store.md  15-testing-deployment.md  16-migration.md  17-file-manifest.md  18-implementation-order.md  19-vector-graph-db-comparison.md  20-cross-document-analysis.md  21-ontology-and-reasoning.md  22-llm-robustness.md  PLAN.md  agent-prompt-audit.md  agent-prompt-implementation.md  structured-output-plan.md
docs/sample-report/: index.html
docs/user-guide/: cli-reference.md  deal-configuration.md  getting-started.md  model-providers.md  provider-coverage.md  reading-report.md  running-pipeline.md  troubleshooting.md
examples/agno-bindu/: .env.example  .gitignore  README.md  agent.py  bindu_agent.py  cli.py  prompts.py  report_tools.py  requirements.txt
examples/litellm-gateway/: README.md  config.yaml
examples/project-atlas/: .gitignore  README.md  deal-config.json
examples/quickstart/: README.md  deal-config.json
examples/search/: auto_renewal.json  change_of_control.json  data_privacy.json  ip_ownership.json  non_compete.json  payment_terms.json  sla_commitments.json  termination_rights.json
scripts/: capture_prompt_golden.py  extract_specialist_prompts.py  generate_sample_report.py  post-edit-lint.sh  pre-commit-gate.sh  run-quality-gates.sh
src/dd_agents/: __init__.py  assessment.py  cli.py  cli_auto_config.py  cli_init.py  cli_logging.py  config.py  errors.py  net_safety.py
src/dd_agents/agents/: __init__.py  acquirer_intelligence.py  base.py  cost_tracker.py  descriptor.py  executive_synthesis.py  introspection.py  judge.py  narrative_generation.py  personas.py  prompt_builder.py  prompt_constants.py  prompt_templates.py  red_flag_scanner.py  registry.py  reporting_lead.py  severity_thresholds.py  specialists.py
src/dd_agents/api/: __init__.py  server.py  webhooks.py
src/dd_agents/chat/: __init__.py  context.py  corrections.py  engine.py  history.py  memory.py
src/dd_agents/customization/: __init__.py  loader.py
src/dd_agents/entity_resolution/: __init__.py  cache.py  dedup.py  logging.py  matcher.py  safe_name.py
src/dd_agents/extraction/: __init__.py  _constants.py  _helpers.py  backend.py  cache.py  coordinates.py  formula_audit.py  glm_ocr.py  language_detect.py  layout_pdf.py  markitdown.py  ocr.py  ocr_registry.py  pipeline.py  quality.py  reference_downloader.py  (+1 more)
tests/: conftest.py
tests/e2e/: conftest.py  test_cross_domain.py  test_full_run.py  test_gateway_provider.py
tests/evals/: __init__.py  conftest.py  metrics.py  models.py  test_agent_evals.py  test_contract_tier.py  test_cross_agent_evals.py  test_eval_robustness.py  test_trigger_evals.py
tests/fixtures/: deal_config_invalid.json  deal_config_minimal.json  deal_config_valid.json
tests/integration/: test_agent_extensibility.py  test_pipeline_integration.py  test_v115_features.py
tests/unit/: test_acquirer_intelligence.py  test_action_items.py  test_action_items_disclaimer.py  test_agent_enrichment.py  test_agent_registry.py  test_agent_routing.py  test_agents.py  test_agents_introspection.py  test_agno_bindu_example.py  test_agnosticism_system.py  test_api.py  test_assessment.py  test_batch_scheduler.py  test_chat.py  test_chronicle.py  test_citation_verifier.py  test_cli_agents.py  test_cli_auto_config.py  test_cli_chat.py  test_cli_init.py  test_cli_json_and_cost.py  test_cli_knowledge_chronicle.py  test_cli_run_options.py  test_cli_version.py  test_coc_termination_nuance.py  test_completeness_report.py  test_compliance_framing.py  test_computed_metrics.py  test_confidence_calibration.py  test_config_loader.py  test_constants.py  test_cost_tracker.py  test_cross_domain_ontology.py  test_cross_domain_synthesis.py  test_customization_loader.py  test_data_generator.py  test_dd_config_integration.py  test_docs_drift.py  test_drill_down.py  test_engine_audit_log.py  (+97 more)
(+304 files in other folders)
