[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dd-agents"
version = "0.1.0"
description = "Forensic M&A due diligence pipeline using Claude Agent SDK"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
# All dependencies are permissively licensed open-source (Apache 2.0, MIT, BSD).
# No commercial or subscription dependencies.
dependencies = [
    "claude-agent-sdk>=0.1.39",
    "pydantic>=2.0",
    "openpyxl>=3.1",
    "networkx>=3.0",
    "rapidfuzz>=3.0",
    "markitdown>=0.1",
    "pymupdf>=1.23",
    "scikit-learn>=1.3",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
vector = ["chromadb>=0.4"]
ocr = ["pytesseract>=0.3", "Pillow>=10.0", "pdf2image>=1.16"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.0",
]

[project.scripts]
dd-agents = "dd_agents.cli:main"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests (require API key, slow)",
    "slow: tests that take more than 1 minute",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
# Third-party packages without stubs (sklearn, pytesseract, etc.) trigger
# import-untyped errors.  Per-module overrides handle missing packages, but
# installed-without-stubs packages need this global disable.
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "fitz.*",
    "markitdown.*",
    "rapidfuzz.*",
    "sklearn.*",
    "pytesseract.*",
    "pdf2image.*",
    "PIL.*",
]
ignore_missing_imports = true
