[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dd-agents"
version = "0.5.2"
description = "Find what gets buried in the data room — open-source integrated M&A due diligence across legal, financial, commercial, and technical domains"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{name = "Zohar Babin"}]
keywords = [
    "due-diligence", "mergers-and-acquisitions", "contract-analysis",
    "legal-tech", "ai-agents", "private-equity", "risk-analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Legal Industry",
    "Typing :: Typed",
]
# All core dependencies are permissively licensed (Apache 2.0, MIT, BSD).
# pymupdf (AGPL-3.0) is optional — see [project.optional-dependencies].
dependencies = [
    "claude-agent-sdk>=0.1.39",
    "pydantic>=2.0",
    "openpyxl>=3.1.3",
    "networkx>=3.0",
    "rapidfuzz>=3.0",
    "markitdown>=0.1",
    "scikit-learn>=1.3",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
# pymupdf is AGPL-3.0 licensed (or Artifex commercial). Install separately.
pdf = ["pymupdf>=1.23"]
vector = ["chromadb>=0.4"]
ocr = ["pytesseract>=0.3", "Pillow>=12.1", "pdf2image>=1.16"]
glm-ocr = ["mlx-vlm>=0.1", "pypdfium2>=4.0", "Pillow>=12.1"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/zoharbabin/due-diligence-agents"
Repository = "https://github.com/zoharbabin/due-diligence-agents"
Documentation = "https://github.com/zoharbabin/due-diligence-agents/tree/main/docs"
Issues = "https://github.com/zoharbabin/due-diligence-agents/issues"
Changelog = "https://github.com/zoharbabin/due-diligence-agents/releases"

[project.scripts]
dd-agents = "dd_agents.cli:main"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests (require API key, slow)",
    "slow: tests that take more than 1 minute",
    "local: deep validation tests, local-only (not for CI)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
log_cli_date_format = "%H:%M:%S"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
# Third-party packages without stubs (sklearn, pytesseract, etc.) trigger
# import-untyped errors.  Per-module overrides handle missing packages, but
# installed-without-stubs packages need this global disable.
# unused-ignore: Pillow stubs vary across versions (load() typed in some,
# untyped in others), so type: ignore comments may be needed locally but
# unused in CI, or vice versa.
disable_error_code = ["import-untyped", "unused-ignore"]

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "fitz.*",
    "markitdown.*",
    "rapidfuzz.*",
    "sklearn.*",
    "pytesseract.*",
    "pdf2image.*",
    "PIL.*",
    "mlx_vlm.*",
    "pypdfium2.*",
    "ollama.*",
]
ignore_missing_imports = true
